--- a/WebUIBlazor/Pages/ControlPanel.razor
+++ b/WebUIBlazor/Pages/ControlPanel.razor
@@ -6,26 +6,23 @@
 
 @using MachineControlHub.Motion;
 @using MachineControlHub.PrinterConnection;
-
+<div class="center-div">
 <h5 style="color: @(serial.isConnected == "Connected" ? "green" : "red")">@serial.isConnected</h5>
 <br />
 <br />
 
-<h3>ControlPanel</h3>
+    <h1>ControlPanel</h1>
 
 
-<button class="btn-outline-primary" @onclick="() => control.AdjustAxis(MovePositions.XMovePos,true,serial)">X+</button>
-<button class="btn-outline-primary" @onclick="() => control.AdjustAxis(MovePositions.YMovePos,true,serial)">Y+</button>
-<button class="btn-outline-primary" @onclick="() => control.AdjustAxis(MovePositions.ZMovePos,true,serial)">Z+</button>
+<button class="button-30" @onclick="() => control.AdjustAxis(MovePositions.XMovePos,true,serial)">X+</button>
+<button class="button-30" @onclick="() => control.AdjustAxis(MovePositions.YMovePos,true,serial)">Y+</button>
+<button class="button-30" @onclick="() => control.AdjustAxis(MovePositions.ZMovePos,true,serial)">Z+</button>
 
 
-<br />
-<br />
-<button class="btn-outline-primary" @onclick="() => control.AdjustAxis(MovePositions.XMovePos,false,serial)">X-</button>
-<button class="btn-outline-primary" @onclick="() => control.AdjustAxis(MovePositions.YMovePos,false,serial)">Y-</button>
-<button class="btn-outline-primary" @onclick="() => control.AdjustAxis(MovePositions.ZMovePos,false,serial)">Z-</button>
-<br />
-<br />
+<button class="button-30" @onclick="() => control.AdjustAxis(MovePositions.XMovePos,false,serial)">X-</button>
+<button class="button-30" @onclick="() => control.AdjustAxis(MovePositions.YMovePos,false,serial)">Y-</button>
+<button class="button-30" @onclick="() => control.AdjustAxis(MovePositions.ZMovePos,false,serial)">Z-</button>
+
 <p style="font-weight: bold">Feedrate: <input type="number" @bind="@control.feedRate.FeedRateFreeMove" /></p>
 
 
@@ -43,41 +40,30 @@
         <input type="radio" name="options" id="option3" autocomplete="off"> 100 mm
     </label>
 </div>
-<br />
+
 <button class="btn-outline-primary" @onclick="control.DisableSteppers">DisableMotors</button>
-<br />
-<br />
+
 <button class="btn-outline-primary" @onclick="() => control.HomeAxisCommand()">HomeAll</button>
 <button class="btn-outline-primary" @onclick="() => control.HomeAxisCommand(true,true)">HomeXY</button>
 <button class="btn-outline-primary" @onclick="() => control.HomeAxisCommand(false,false,true)">HomeZ</button>
-<br />
-<br />
+
 <button class="btn-outline-primary" @onclick="() => control.AdjustAxis(MovePositions.EMovePos,true,serial)">Extrude</button>
 <button class="btn-outline-primary" @onclick="() => control.AdjustAxis(MovePositions.EMovePos,false,serial)">Retract</button>
-<br />
-<br />
+
 
 <button class="btn-outline-primary" @onclick="() => control.SetFanOff()">Fan Off</button>
 <button class="btn-outline-primary" @onclick="() => control.SetFanSpeed(Data.ControlPanelService.MAX_FAN_SPEED)">Fan On</button>
-<br />
-<br />
+
 <p style="font-weight: bold">
     Fan Speed: 0%
     <input width="400" type="range" min="0" max="255" @bind="control.defaultFanSpeed" @onclick="() => control.SetFanSpeed(control.defaultFanSpeed)">100%
 </p>
-
-<br />
-<br />
 <div>
     <textarea style="width:100%" readonly rows="10" cols="50">@output</textarea>
 </div>
 <input style="width:95%" type="text" placeholder="Send G-Code Commands" @bind="control.sendCommand" />
 <button @onclick="() => control.SendGcodeViaTerminal(control.sendCommand,serial)">Send</button>
-
-<br />
-<br />
-<br />
-<br />
+</div>
 @code {
     private string output;
 
