--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -4,18 +4,16 @@
 
 @using MachineControlHub.Motion;
 @using MachineControlHub.Print;
-
+<div class="center-div">
 <h5 style="color: @(serial.isConnected == "Connected" ? "green" : "red")">@serial.isConnected</h5>
-<br />
-<br />
-<h3>Print</h3>
+
+<h1>Print</h1>
 
 
-<button @onclick="() => {print.StartPrint(fileToPrint);print.StartTimeOfPrint();print.GetFileNameAndSize(fileToPrint);}">Start Print</button>
-<button @onclick="print.PausePrint">Pause Print</button>
-<button @onclick="print.StopPrint">Stop Print</button>
-<br />
-<br />
+<button class="button-30" @onclick="() => {print.StartPrint(fileToPrint);print.StartTimeOfPrint();print.GetFileNameAndSize(fileToPrint);}">Start Print</button>
+<button class="button-30" @onclick="print.PausePrint">Pause Print</button>
+<button class="button-30" @onclick="print.StopPrint">Stop Print</button>
+
 <p>SD files:</p>
 
 
@@ -30,8 +28,6 @@
         }
     }
 </select>
-<br />
-<br />
 
 <p>File printing: <strong>@print.printName</strong></p>
 <p>Estimated print time:</p>
@@ -39,7 +35,7 @@
 <p>Start time: <strong>@print.printJob.FormattedStartTime</strong></p>
 <p>File Size: <strong>@print.fileSize MB</strong></p>
 
-
+</div>
 
 @code {
     public string fileToPrint = "";
