--- a/WebUIBlazor/Pages/_Layout.cshtml
+++ b/WebUIBlazor/Pages/_Layout.cshtml
@@ -10,6 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="css/custom.css" rel="stylesheet" />
     <link href="WebUI.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
