--- a/WebUIBlazor/Shared/NavMenu.razor
+++ b/WebUIBlazor/Shared/NavMenu.razor
@@ -36,7 +36,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="bedlevel">
-                <span class="oi-box" aria-hidden="true"></span> Bed Leveling
+                <span class="oi oi-aperture" aria-hidden="true"></span> Bed Leveling
             </NavLink>
         </div>
     </nav>
