--- a/WebUIBlazor/Pages/_Layout.cshtml
+++ b/WebUIBlazor/Pages/_Layout.cshtml
@@ -12,6 +12,9 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
     <link href="WebUI.styles.css" rel="stylesheet" />
+    <script src="_content/Plotly.Blazor/plotly-latest.min.js" type="text/javascript"></script>
+    <script src="_content/Plotly.Blazor/plotly-interop.js" type="text/javascript"></script>
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -27,6 +30,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
 
     <script src="_framework/blazor.server.js"></script>
 </body>
