--- a/WebUIBlazor/_Imports.razor
+++ b/WebUIBlazor/_Imports.razor
@@ -9,3 +9,6 @@
 @using WebUI
 @using WebUI.Shared
 @using Microsoft.AspNetCore.Components
+@using Plotly.Blazor
+@using Plotly.Blazor.Traces
+@using MudBlazor
