--- a/WebUIBlazor/Pages/BedLeveling.razor
+++ b/WebUIBlazor/Pages/BedLeveling.razor
@@ -34,6 +34,7 @@
     private async Task Calibrate()
     {
         await Task.Run(() => levelBed.CalibrateBed());
+        levelBed.meshData = GetSurfaceData();
         LoadData();
     }
 
@@ -68,7 +69,7 @@
             };
 
         data = new List<ITrace>();
-
+        LoadData();
         base.OnInitialized();
     }
 
@@ -76,7 +77,7 @@
     {
         Task.Run(async () =>
         {
-            foreach (var trace in await GetSurfaceData())
+            foreach (var trace in await levelBed.meshData)
             {
                 await InvokeAsync(async () => await chart.AddTrace(trace));
                 await Task.Delay(100);
