--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -1,4 +1,5 @@
 ﻿@page "/connection"
+@page "/"
 @using MachineControlHub.PrinterConnection
 @inject Data.ConnectionServiceSerial serial
 @inject Data.PrinterData printer
