--- a/WebUIBlazor/Pages/ControlPanel.razor
+++ b/WebUIBlazor/Pages/ControlPanel.razor
@@ -5,6 +5,7 @@
 @using Plotly.Blazor.LayoutLib
 @using Plotly.Blazor.Traces.ScatterLib
 @using MachineControlHub.Motion
+@using System.Text.RegularExpressions
 @implements IDisposable
 
 
@@ -72,6 +73,7 @@
     Fan Speed: 0%
     <input width="400" type="range" min="0" max="255" @bind="control.defaultFanSpeed" @onclick="() => control.SetFanSpeed(control.defaultFanSpeed)">100%
 </p>
+<p>@control.fanSpeedInPercentage%</p>
 <div>
     <textarea style="width:100%" readonly rows="10" cols="50">@control.consoleOutput</textarea>
 </div>
@@ -92,14 +94,14 @@
 
     protected override void OnInitialized()
     {
-            timer = new Timer(UpdateParagraph, null, TimeSpan.Zero, TimeSpan.FromSeconds(1));
+        timer = new Timer(UpdateParagraph, null, TimeSpan.Zero, TimeSpan.FromSeconds(1));
 
-            config = new Config
+        config = new Config
                 {
                     Responsive = true
                 };
 
-            layout = new Layout
+        layout = new Layout
                 {
                     Title = new Title
                     {
@@ -109,7 +111,7 @@
                     PlotBgColor = "#AAAFB5"
                 };
 
-            data = new List<ITrace>
+        data = new List<ITrace>
             {
             new Scatter
             {
@@ -119,7 +121,7 @@
                 Y = Enumerable.Range(0, 201).SelectMany(y => Enumerable.Repeat(y, 201)).Cast<object>().ToList()
             }
             };
-        
+
     }
 
     private async void UpdateParagraph(object state)
@@ -127,8 +129,18 @@
         if (serial.initialized)
         {
             Thread.Sleep(50);
-            control.consoleOutput += serial.Read();
+            string message = serial.Read();
 
+            double value;
+            Match match = Regex.Match(message, Data.ControlPanelService.FAN_PATTERN);
+            if(match.Success)
+            {
+                value = double.Parse(match.Groups[1].Value);
+                control.CalculateFanSpeedIntoPercentage(value);
+            }
+
+            string filteredOutput = message.Replace("ok", " ");
+            control.consoleOutput += filteredOutput;
             await InvokeAsync(StateHasChanged);
         }
     }
